# ibkr_mvp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
data/db/: trading.duckdb
scripts/: check_db.py  check_state.ipynb  diagnose_contract.py  test_connect.py
src/: config.py  main.py  utils.py
src/ai/: gemini_filter.py
src/broker/: ibkr_client.py
src/execution/: executor.py
src/market/: bars.py
src/risk/: risk_manager.py
src/storage/: csv_store.py  duckdb_store.py
src/strategy/: base_strategy.py  orb_strategy.py
tests/: test_ai_json.py  test_contract_logic.py
